                                    Hatari
                                   --------
                                Release Notes

 Version 1.x.x (201x-xx-xx):
 ---------------------------

Emulation:
- STE Joypads:
  - Fix: Joypad A Option button
  - Fix: Joypad B extended buttons
- GEMDOS HD:
  - Fix: matching 8 long file names with '.'
  - Better mapping of host errors to GEMDOS error codes
- CPU :
  - in 68000 mode, remove some un-allowed EA for CMPI and BTST

Emulator:
- Support for compiling with libSDL2 (experimental)
- Fix: update default max window size for 2-line statusbar
  NOTE: size would need to be updated in Hatari config files too!
- SDL GUI:
  - keyboard navigation & shortcuts for options GUI
  - sort file selector items case-insensitively with folders first
- Debugger:
  - added "save" subcommand to "history" command

Other changes:
- Remaining Hatari OSX UI changes for Hatari v1.8.0
  (localization)


 Version 1.8.0 (2014-07-30):
 ---------------------------

Emulation:
- ST video changes :
  - Handle 0 byte line by switching freq in STE mode
  - Use high res when ff8260 is set to 3
  - Randomly return 0 or 1 when reading unused bits 3,7 and 11 of
    color registers (except when running from ROM)
  - Better detection of bottom border removal on a 60 Hz screen
  - support for color change during only 4 cycles
  - better bitmap/color alignment for STE med res overscan at 60 Hz
  - Set default value of nSpec512Threshold to "1" instead of "16"
  - Update the position of the next VBL when 50Hz and 60Hz lines are mixed
  - When video address is set into IO region, keep the video pointer on 24 bits
- Videl changes :
  - correct masking of the true color palette registers
- CPU changes :
  - Fix a case when MFP's interrupt happens during the IACK sequence
    for HBL/VBL
  - Many prefetch changes required by some game's protection
- Sound changes :
  - Fix STE sound mixing using LMC when mixer=0 (DMA sound only)