@@ -31,4 +31,10 @@ extern bool Str_IsHex(const char *str);
 extern void Str_Filename2TOSname(const char *src, char *dst);
 extern void Str_Dump_Hex_Ascii ( char *p , int Len , int Width , const char *Suffix , FILE *pFile );
 
+/* Interface of character set conversions */
+extern void Str_AtariToHost(const char *source, char *dest, int destLen, char replacementChar);
+extern void Str_HostToAtari(const char *source, char *dest, char replacementChar);
+extern void Str_DecomposedToPrecomposedUtf8(const char *source, char *dest);
+
+
 #endif  /* HATARI_STR_H */
