@@ -13,6 +13,8 @@ Emulation:
 - GEMDOS HD:
   - Fix: matching 8 long file names with '.'
   - Better mapping of host errors to GEMDOS error codes
+  - Support for mapping file names with 8-bit characters
+    between host and Atari encodings (umlauted chars etc)
 - CPU :
   - in 68000 mode, remove some un-allowed EA for CMPI and BTST
 
